2010-12-05  john ffitch  <jpff@codemist.co.uk>

	* Engine/csound_orc.l (do_at): New code to support @ and @@ operators

2010-11-28  john ffitch  <jpff@codemist.co.uk>

	* Engine/symbtab.c: Added cent as function

2010-11-27  john ffitch  <jpff@codemist.co.uk>

	* OOps/ugens3.c (adsyn): check that ktogo is never zero

2010-11-16  John ff  <jpff@cs.bath.ac.uk>

	* Top/main.c (csoundCompile): and call macro inits

	* Engine/csound_orc.l: ADd standard macro initialisation code to lexer

2010-11-12  John ff  <jpff@cs.bath.ac.uk>

	* Engine/csound_orc_semantics.c (handle_polymorphic_opcode):
	Calculating c before switch can lead to following a null
	pointer.  Moved calculation to where it is needed.

2010-11-05  John ff  <jpff@cs.bath.ac.uk>

	* OOps/ugens4.c (riset, rndset, rhset): Use Warning rather than Message

2010-11-04  John ff  <jpff@cs.bath.ac.uk>

	* Opcodes/pvsbasic.c (MAXOUTS): Extend upto 16 outputs
	(localops): Use F format in pvstanal

2010-10-12  john ffitch  <jpff@codemist.co.uk>

	* Engine/csound_orc.y: Allow labels in exprlists

2010-10-08  John ff  <jpff@cs.bath.ac.uk>

	* OOps/cmath.c (ipow, apow): If normalisation is zero make it 1;
	Needed in new parser as optional arg not  handled

	* csound_orc.l: Many changes in macros and stack of inputs

2010-09-23  john ffitch  <jpff@codemist.co.uk>

	* Opcodes/fout.c (sprints): Attempt tp fix %%->% problem

2010-09-18  john ffitch  <jpff@codemist.co.uk>

	* Engine/csound_orc_expressions.c (create_expression): Unary minus
	should use i rate if it can

2010-09-17  john ffitch  <jpff@codemist.co.uk>

	* SConstruct: 
	* Top/csound.c: Make new parser default

2010-09-02  Michael Gogins <michael.gogins@gmail.com>

	* Migrated Windows compiler to MinGW GCC 4.4.0 from Qt for all
	third party and Csound executables. This compiler generates dw2
	exception handling code.

	* Fixed up examples to execute in their own directories.

	* Changed csoundSetMessageCallback to reset the callback to